--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -8,8 +8,8 @@ body {
   font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
-  color: #666;
-  background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
+  color: #c3c4c5;
+  background-color: #2a2d32;
 }
 
 p {
@@ -49,7 +49,7 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #9ddcff;
+  color: #c3c4c5;
   letter-spacing: 0;
 }
 
@@ -61,7 +61,7 @@ header h2 {
 
 #content-wrapper {
   padding-top: 30px;
-  border-top: solid 1px #fff;
+  border-top: solid 1px #2a2d32;
 }
 
 #main-content {
