--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,17 @@
     <meta name="theme-color" content="{{ site.color }}">
     <link rel="shortcut icon" type="image/png" href="{{ site.image }}">
     <script src="https://june11.battleforthenet.com/widget.js" async></script>
-    {{ site.more }}
+    
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async>
+      const crate = new Crate({
+        server: '452675283485589505',
+        channel: '452692979082330115',
+        location:['bottom', -450]
+      })
+
+     crate.notify('Welcome to Blargbot Custom Commands! Click the button below to chat on Discord.')
+  })
+</script>
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
