--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -49,7 +49,7 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #c3c4c5;
+  color: #9ddcff;
   letter-spacing: 0;
 }
 
@@ -193,7 +193,7 @@ form {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 2.8em;
   font-weight: normal;
-  color: #474747;
+  color: #c0c0c0;
   text-indent: 6px;
   letter-spacing: -1px;
 }
@@ -210,7 +210,7 @@ form {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 22px;
   font-weight: bold;
-  color: #474747;
+  color: #c0c0c0;
   text-indent: 4px;
 }
 #main-content h2:before {
@@ -226,7 +226,7 @@ form {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 18px;
   font-weight: bold;
-  color: #474747;
+  color: #c0c0c0;
   text-indent: 3px;
 }
 
@@ -242,7 +242,7 @@ form {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 15px;
   font-weight: bold;
-  color: #474747;
+  color: #c0c0c0;
   text-indent: 3px;
 }
 
@@ -257,7 +257,7 @@ h4:before {
   margin-bottom: 8px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 14px;
-  color: #474747;
+  color: #c0c0c0;
   text-indent: 3px;
 }
 h5:before {
@@ -271,7 +271,7 @@ h5:before {
   margin-bottom: 8px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: .8em;
-  color: #474747;
+  color: #c0c0c0;
   text-indent: 3px;
 }
 h6:before {
