--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
       const crate = new Crate({
         server: '452675283485589505',
         channel: '452692979082330115',
+        shard: 'https://beta.widgetbot.io',
         location: ['bottom', -450]
       })
 
