--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="{{ site.color }}">
     <link rel="shortcut icon" type="image/png" href="{{ site.image }}">
     <script src="https://june11.battleforthenet.com/widget.js" async></script>
-    <script src="https://twemoji.maxcdn.com/twemoji.min.js"></script>
+    <script src="https://twemoji.maxcdn.com/twemoji.min.js">twemoji.parse(document.body)</script>
     
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async>
       const crate = new Crate({
