Use normal widgetbot for now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       const crate = new Crate({
         server: '452675283485589505',
         channel: '452692979082330115',
-        shard: 'https://beta.widgetbot.io',
+    //    shard: 'https://beta.widgetbot.io',
         location: ['bottom', -450]
       })
 
