--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -137,18 +137,27 @@ code {
   border: solid 1px #dbe7f3;
 }
 
+.code {
+  padding: 0 3px;
+  background-color: #f2f8fc;
+  border: solid 1px #dbe7f3;
+}
+
 pre {
   padding: 20px;
   overflow: auto;
   text-shadow: none;
   background: #fff;
-  border: solid 1px #f2f2f2;
 }
 pre code {
   padding: 0;
   color: #2879d0;
-  background-color: #fff;
   border: none;
+}
+
+.highlight {
+  background-color: #23272a !important;
+  border-radius: 5px;
 }
 
 ul, ol, dl {
