More updating code styles

--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -133,14 +133,12 @@ code, pre {
 
 code {
   padding: 0 3px;
-  background-color: #f2f8fc;
   border: solid 1px #dbe7f3;
 }
 
 .code {
-  padding: 0 3px;
   background-color: #f2f8fc;
-  border: solid 1px #dbe7f3;
+  border-radius: 5px;
 }
 
 pre {
