--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -133,7 +133,6 @@ code, pre {
 
 code {
   padding: 0 3px;
-  border: solid 1px #dbe7f3;
 }
 
 .code {
@@ -151,6 +150,13 @@ pre code {
   padding: 0;
   color: #2879d0;
   border: none;
+}
+
+.highlighter-rouge {
+  padding: 3px;
+  background-color: #23272a;
+  color: #2879d0;
+  border-radius: 3px;
 }
 
 .highlight {
