--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -152,7 +152,7 @@ pre code {
   border: none;
 }
 
-.highlighter-rouge code {
+code.highlighter-rouge {
   padding: 3px;
   background-color: #23272a;
   color: #2879d0;
