Darken inline code in link on hover

--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -159,6 +159,10 @@ code.highlighter-rouge {
   border-radius: 3px;
 }
 
+a:hover code.highlighter-rouge {
+  color: #2268b2;
+}
+
 .highlight {
   background-color: #23272a !important;
   border-radius: 5px;
