crate is too close to right

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         server: '452675283485589505',
         channel: '452692979082330115',
     //    shard: 'https://beta.widgetbot.io',
-        location: ['bottom', -10]
+        location: ['bottom', 'right']
       })
 
      crate.notify('Welcome to Blargbot Custom Commands! Click the button below to chat on Discord.')
