--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -155,8 +155,12 @@ pre code {
 code.highlighter-rouge {
   padding: 3px;
   background-color: #23272a;
-  color: #2879d0;
+  color: #c3c4c5;
   border-radius: 3px;
+}
+
+a code.highlighter-rouge {
+  color: #2879d0;
 }
 
 a:hover code.highlighter-rouge {
