Update widgetbot stuff

--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -369,6 +369,10 @@ footer a:hover {
 * html .clearfix {height: 1%;}
 .clearfix {display: block;}
 
+iframe {
+  border: none;
+}
+
 /* #Media Queries
 ================================================== */
 
